--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ server.port=8080
 
 # Master DataBase
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.master.jdbc-url=jdbc:mysql://127.0.0.1:3306/yourdb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.master.username=yourdbid
-spring.datasource.master.password=yourdbpw
+spring.datasource.master.jdbc-url=jdbc:mysql://127.0.0.1:3306/isaac_data?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.master.username=root
+spring.datasource.master.password=system
 
 # Slave DataBase
 spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.slave.jdbc-url=jdbc:mysql://127.0.0.1:3307/yourdb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.slave.username=yourdbid
-spring.datasource.slave.password=yourdbpw
+spring.datasource.slave.jdbc-url=jdbc:mysql://127.0.0.1:3307/isaac_data?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.slave.username=root
+spring.datasource.slave.password=system
  
 #salt for encrypting password
 encrypt.pw.salt=flabsmartstore
