--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port=8080
 
 # Master DataBase
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.master.jdbc-url=jdbc:mysql://127.0.0.1:3306/isaac_data?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.master.jdbc-url=jdbc:mysql://27.96.131.195:3306/smartstore?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.master.username=root
 spring.datasource.master.password=system
 
 # Slave DataBase
 spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.slave.jdbc-url=jdbc:mysql://127.0.0.1:3307/isaac_data?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.slave.jdbc-url=jdbc:mysql://115.85.182.29:3307/smartstore?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.slave.username=root
 spring.datasource.slave.password=system
  
