--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.master.password=system
 # Slave DataBase
 spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.slave.jdbc-url=jdbc:mysql://115.85.182.28:3306/smartstore?useSSL=false&serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.slave.username=smartstore
+spring.datasource.slave.username=smartstore2
 spring.datasource.slave.password=system 
  
 #salt for encrypting password  
